# feishu-message-send-skill

./: .gitignore  CLAUDE.md  README.md  build.py  pyproject.toml
.claude/: settings.local.json
doc/: requirements.md
doc/output/: SKILL.md  config.example.json
src/: cli.py  config.py  parser.py  sender.py
tests/: test_config.py  test_parser.py  test_sender.py
